Update web portion

--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Setup</title>
+    <link rel="stylesheet" type="text/css" href="index.css"></style>
 </head>
 <body>
     <p>Hey, I'm playing around with react right now so literally everything else on the domain is down.  Uh... sorry.</p>
