Fully functional (ish)

--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>Hey, I'm playing around with react right now so literally everything else on the domain is down.  Uh... sorry.</p>
-    <p>In the mean time, here is everyone tweeting about JS right now</p>
+    <p>In the mean time, here is everyone tweeting about a thing of your choice right now</p>
     <div id="app"></div>
     <script src="index.js"></script>
 </body>
