Parity with running version

--- a/web/index.html
+++ b/web/index.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" type="text/css" href="index.css"></style>
 </head>
 <body>
-    <p>Hey, I'm playing around with react right now so literally everything else on the domain is down.  Uh... sorry.</p>
-    <p>In the mean time, here is everyone tweeting about a thing of your choice right now</p>
+    <p>Use the filter box to get a live stream of all tweets matching the keyword.</p>
     <div id="app"></div>
     <script src="index.js"></script>
 </body>
